@@ -7307,12 +7307,15 @@ expr_stmt|;
 block|}
 block|}
 block|}
-DECL|method|computeSlotMillis (TaskAttemptImpl taskAttempt)
+DECL|method|updateMillisCounters (JobCounterUpdateEvent jce, TaskAttemptImpl taskAttempt)
 specifier|private
 specifier|static
-name|long
-name|computeSlotMillis
+name|void
+name|updateMillisCounters
 parameter_list|(
+name|JobCounterUpdateEvent
+name|jce
+parameter_list|,
 name|TaskAttemptImpl
 name|taskAttempt
 parameter_list|)
@@ -7331,12 +7334,41 @@ operator|.
 name|getTaskType
 argument_list|()
 decl_stmt|;
+name|long
+name|duration
+init|=
+operator|(
+name|taskAttempt
+operator|.
+name|getFinishTime
+argument_list|()
+operator|-
+name|taskAttempt
+operator|.
+name|getLaunchTime
+argument_list|()
+operator|)
+decl_stmt|;
 name|int
-name|slotMemoryReq
+name|mbRequired
 init|=
 name|taskAttempt
 operator|.
 name|getMemoryRequired
+argument_list|(
+name|taskAttempt
+operator|.
+name|conf
+argument_list|,
+name|taskType
+argument_list|)
+decl_stmt|;
+name|int
+name|vcoresRequired
+init|=
+name|taskAttempt
+operator|.
+name|getCpuRequired
 argument_list|(
 name|taskAttempt
 operator|.
@@ -7382,31 +7414,124 @@ argument_list|(
 operator|(
 name|float
 operator|)
-name|slotMemoryReq
+name|mbRequired
 operator|/
 name|minSlotMemSize
 argument_list|)
 decl_stmt|;
-name|long
-name|slotMillisIncrement
-init|=
+if|if
+condition|(
+name|taskType
+operator|==
+name|TaskType
+operator|.
+name|MAP
+condition|)
+block|{
+name|jce
+operator|.
+name|addCounterUpdate
+argument_list|(
+name|JobCounter
+operator|.
+name|SLOTS_MILLIS_MAPS
+argument_list|,
 name|simSlotsRequired
 operator|*
-operator|(
-name|taskAttempt
+name|duration
+argument_list|)
+expr_stmt|;
+name|jce
 operator|.
-name|getFinishTime
-argument_list|()
-operator|-
-name|taskAttempt
+name|addCounterUpdate
+argument_list|(
+name|JobCounter
 operator|.
-name|getLaunchTime
-argument_list|()
-operator|)
-decl_stmt|;
-return|return
-name|slotMillisIncrement
-return|;
+name|MB_MILLIS_MAPS
+argument_list|,
+name|duration
+operator|*
+name|mbRequired
+argument_list|)
+expr_stmt|;
+name|jce
+operator|.
+name|addCounterUpdate
+argument_list|(
+name|JobCounter
+operator|.
+name|VCORES_MILLIS_MAPS
+argument_list|,
+name|duration
+operator|*
+name|vcoresRequired
+argument_list|)
+expr_stmt|;
+name|jce
+operator|.
+name|addCounterUpdate
+argument_list|(
+name|JobCounter
+operator|.
+name|MILLIS_MAPS
+argument_list|,
+name|duration
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+name|jce
+operator|.
+name|addCounterUpdate
+argument_list|(
+name|JobCounter
+operator|.
+name|SLOTS_MILLIS_REDUCES
+argument_list|,
+name|simSlotsRequired
+operator|*
+name|duration
+argument_list|)
+expr_stmt|;
+name|jce
+operator|.
+name|addCounterUpdate
+argument_list|(
+name|JobCounter
+operator|.
+name|MB_MILLIS_REDUCES
+argument_list|,
+name|duration
+operator|*
+name|mbRequired
+argument_list|)
+expr_stmt|;
+name|jce
+operator|.
+name|addCounterUpdate
+argument_list|(
+name|JobCounter
+operator|.
+name|VCORES_MILLIS_REDUCES
+argument_list|,
+name|duration
+operator|*
+name|vcoresRequired
+argument_list|)
+expr_stmt|;
+name|jce
+operator|.
+name|addCounterUpdate
+argument_list|(
+name|JobCounter
+operator|.
+name|MILLIS_REDUCES
+argument_list|,
+name|duration
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 DECL|method|createJobCounterUpdateEventTASucceeded ( TaskAttemptImpl taskAttempt)
 specifier|private
@@ -7418,14 +7543,6 @@ name|TaskAttemptImpl
 name|taskAttempt
 parameter_list|)
 block|{
-name|long
-name|slotMillis
-init|=
-name|computeSlotMillis
-argument_list|(
-name|taskAttempt
-argument_list|)
-decl_stmt|;
 name|TaskId
 name|taskId
 init|=
@@ -7448,28 +7565,11 @@ name|getJobId
 argument_list|()
 argument_list|)
 decl_stmt|;
-name|jce
-operator|.
-name|addCounterUpdate
+name|updateMillisCounters
 argument_list|(
-name|taskId
-operator|.
-name|getTaskType
-argument_list|()
-operator|==
-name|TaskType
-operator|.
-name|MAP
-condition|?
-name|JobCounter
-operator|.
-name|SLOTS_MILLIS_MAPS
-else|:
-name|JobCounter
-operator|.
-name|SLOTS_MILLIS_REDUCES
+name|jce
 argument_list|,
-name|slotMillis
+name|taskAttempt
 argument_list|)
 expr_stmt|;
 return|return
@@ -7521,14 +7621,6 @@ name|getJobId
 argument_list|()
 argument_list|)
 decl_stmt|;
-name|long
-name|slotMillisIncrement
-init|=
-name|computeSlotMillis
-argument_list|(
-name|taskAttempt
-argument_list|)
-decl_stmt|;
 if|if
 condition|(
 name|taskType
@@ -7549,25 +7641,6 @@ argument_list|,
 literal|1
 argument_list|)
 expr_stmt|;
-if|if
-condition|(
-operator|!
-name|taskAlreadyCompleted
-condition|)
-block|{
-comment|// dont double count the elapsed time
-name|jce
-operator|.
-name|addCounterUpdate
-argument_list|(
-name|JobCounter
-operator|.
-name|SLOTS_MILLIS_MAPS
-argument_list|,
-name|slotMillisIncrement
-argument_list|)
-expr_stmt|;
-block|}
 block|}
 else|else
 block|{
@@ -7582,25 +7655,20 @@ argument_list|,
 literal|1
 argument_list|)
 expr_stmt|;
+block|}
 if|if
 condition|(
 operator|!
 name|taskAlreadyCompleted
 condition|)
 block|{
-comment|// dont double count the elapsed time
-name|jce
-operator|.
-name|addCounterUpdate
+name|updateMillisCounters
 argument_list|(
-name|JobCounter
-operator|.
-name|SLOTS_MILLIS_REDUCES
+name|jce
 argument_list|,
-name|slotMillisIncrement
+name|taskAttempt
 argument_list|)
 expr_stmt|;
-block|}
 block|}
 return|return
 name|jce
@@ -7651,14 +7719,6 @@ name|getJobId
 argument_list|()
 argument_list|)
 decl_stmt|;
-name|long
-name|slotMillisIncrement
-init|=
-name|computeSlotMillis
-argument_list|(
-name|taskAttempt
-argument_list|)
-decl_stmt|;
 if|if
 condition|(
 name|taskType
@@ -7679,25 +7739,6 @@ argument_list|,
 literal|1
 argument_list|)
 expr_stmt|;
-if|if
-condition|(
-operator|!
-name|taskAlreadyCompleted
-condition|)
-block|{
-comment|// dont double count the elapsed time
-name|jce
-operator|.
-name|addCounterUpdate
-argument_list|(
-name|JobCounter
-operator|.
-name|SLOTS_MILLIS_MAPS
-argument_list|,
-name|slotMillisIncrement
-argument_list|)
-expr_stmt|;
-block|}
 block|}
 else|else
 block|{
@@ -7712,25 +7753,20 @@ argument_list|,
 literal|1
 argument_list|)
 expr_stmt|;
+block|}
 if|if
 condition|(
 operator|!
 name|taskAlreadyCompleted
 condition|)
 block|{
-comment|// dont double count the elapsed time
-name|jce
-operator|.
-name|addCounterUpdate
+name|updateMillisCounters
 argument_list|(
-name|JobCounter
-operator|.
-name|SLOTS_MILLIS_REDUCES
+name|jce
 argument_list|,
-name|slotMillisIncrement
+name|taskAttempt
 argument_list|)
 expr_stmt|;
-block|}
 block|}
 return|return
 name|jce
