@@ -276,6 +276,20 @@ name|hadoop
 operator|.
 name|mapreduce
 operator|.
+name|Counters
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|mapreduce
+operator|.
 name|JobCounter
 import|;
 end_import
@@ -1738,15 +1752,15 @@ expr_stmt|;
 block|}
 annotation|@
 name|Test
-DECL|method|testSlotMillisCounterUpdate ()
+DECL|method|testMillisCountersUpdate ()
 specifier|public
 name|void
-name|testSlotMillisCounterUpdate
+name|testMillisCountersUpdate
 parameter_list|()
 throws|throws
 name|Exception
 block|{
-name|verifySlotMillis
+name|verifyMillisCounters
 argument_list|(
 literal|2048
 argument_list|,
@@ -1755,7 +1769,7 @@ argument_list|,
 literal|1024
 argument_list|)
 expr_stmt|;
-name|verifySlotMillis
+name|verifyMillisCounters
 argument_list|(
 literal|2048
 argument_list|,
@@ -1764,7 +1778,7 @@ argument_list|,
 literal|1024
 argument_list|)
 expr_stmt|;
-name|verifySlotMillis
+name|verifyMillisCounters
 argument_list|(
 literal|10240
 argument_list|,
@@ -1774,10 +1788,10 @@ literal|2048
 argument_list|)
 expr_stmt|;
 block|}
-DECL|method|verifySlotMillis (int mapMemMb, int reduceMemMb, int minContainerSize)
+DECL|method|verifyMillisCounters (int mapMemMb, int reduceMemMb, int minContainerSize)
 specifier|public
 name|void
-name|verifySlotMillis
+name|verifyMillisCounters
 parameter_list|(
 name|int
 name|mapMemMb
@@ -2209,6 +2223,14 @@ argument_list|,
 literal|10
 argument_list|)
 expr_stmt|;
+name|Counters
+name|counters
+init|=
+name|job
+operator|.
+name|getAllCounters
+argument_list|()
+decl_stmt|;
 name|Assert
 operator|.
 name|assertEquals
@@ -2228,10 +2250,7 @@ operator|/
 name|minContainerSize
 argument_list|)
 argument_list|,
-name|job
-operator|.
-name|getAllCounters
-argument_list|()
+name|counters
 operator|.
 name|findCounter
 argument_list|(
@@ -2263,16 +2282,127 @@ operator|/
 name|minContainerSize
 argument_list|)
 argument_list|,
-name|job
-operator|.
-name|getAllCounters
-argument_list|()
+name|counters
 operator|.
 name|findCounter
 argument_list|(
 name|JobCounter
 operator|.
 name|SLOTS_MILLIS_REDUCES
+argument_list|)
+operator|.
+name|getValue
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|Assert
+operator|.
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|counters
+operator|.
+name|findCounter
+argument_list|(
+name|JobCounter
+operator|.
+name|MILLIS_MAPS
+argument_list|)
+operator|.
+name|getValue
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|Assert
+operator|.
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|counters
+operator|.
+name|findCounter
+argument_list|(
+name|JobCounter
+operator|.
+name|MILLIS_REDUCES
+argument_list|)
+operator|.
+name|getValue
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|Assert
+operator|.
+name|assertEquals
+argument_list|(
+name|mapMemMb
+argument_list|,
+name|counters
+operator|.
+name|findCounter
+argument_list|(
+name|JobCounter
+operator|.
+name|MB_MILLIS_MAPS
+argument_list|)
+operator|.
+name|getValue
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|Assert
+operator|.
+name|assertEquals
+argument_list|(
+name|reduceMemMb
+argument_list|,
+name|counters
+operator|.
+name|findCounter
+argument_list|(
+name|JobCounter
+operator|.
+name|MB_MILLIS_REDUCES
+argument_list|)
+operator|.
+name|getValue
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|Assert
+operator|.
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|counters
+operator|.
+name|findCounter
+argument_list|(
+name|JobCounter
+operator|.
+name|VCORES_MILLIS_MAPS
+argument_list|)
+operator|.
+name|getValue
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|Assert
+operator|.
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|counters
+operator|.
+name|findCounter
+argument_list|(
+name|JobCounter
+operator|.
+name|VCORES_MILLIS_REDUCES
 argument_list|)
 operator|.
 name|getValue
